# TB-SystemCalls

assign01_filecopy/: CMakeLists.txt  Makefile  diffFiles.sh  filecopy.c  submit.properties  test1_input.txt  test2_input.txt
